--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,7 @@ body {
     background: url("../images/concrete_seamless.png");
 }
 
-.container {
-    width: 960px;
-}
-
-.navbar-brand {
+.navbar-default .navbar-brand {
     font-family: Georgia, Times, "Times New Roman", serif;
     height: 100%;
     margin: 0;
@@ -19,9 +15,13 @@ body {
     font-size: 30px;
     font-weight: 700;
     width: 250px;
-    background: #4aaaa5;
     text-align: center;
     color: #fff;
+    background: #4aaaa5;
+}
+
+.navbar-default .navbar-brand:hover {
+    background: blue;
 }
 
 h1,
@@ -113,26 +113,37 @@ h3,
     background: #666;
     border-top: 8px solid #4aaaa5;
 }
+.work {
+    position: relative;
+    float: left;
+    width: 340px;
+    margin: 20px 0 25px;
+    overflow: auto;
+}
 
-/*.footer {*/
-    /*background-color: #4aaaa5;*/
-    /*height: 90px;*/
-    /*line-height: 90px;*/
-    /*text-align: center;*/
-/*}*/
-    /*border-left: 0 none;*/
-/*}*/
+.work:nth-child(even) {
+    margin-right: 40px;
+}
 
-/*.nav li a {*/
-    /*line-height: 90px;*/
-    /*padding-top: 0;*/
-    /*padding-bottom: 0;*/
-    /*padding-right: auto;*/
-    /*padding-left: auto;*/
-    /*text-align: center;*/
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+}
 
-    /*font-size: 18px;*/
-/*}*/
+.work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+}
 
 @media (max-width: 991px) {
     .container {
@@ -153,19 +164,23 @@ h3,
     .navbar-header {
         width: 100%;
     }
+
     .container {
         width: 100%;
         padding: 0;
     }
+
     #main-container {
         width: 90%;
         padding: 0;
         margin: auto;
     }
+
     main-section {
         margin: 30px;
     }
-    .container>.navbar-header {
+
+    .container > .navbar-header {
         margin: 0;
     }
 
@@ -183,14 +198,17 @@ h3,
         margin: 0;
         padding: 0;
     }
+
     .navbar-right {
         float: none;
     }
+
     .auth-image {
         float: none;
         width: 100%;
         margin: 0 10px 10px 0;
     }
+
     .navbar-link {
         text-align: center;
         width: 33%;
@@ -198,5 +216,4 @@ h3,
         margin: auto;
         display: block;
     }
-
 }
